--- a/index.html
+++ b/index.html
@@ -2,52 +2,50 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>DETRAN-SP 3D | ULTRA GRAPHICS</title>
+    <title>DETRAN-SP 3D | ESPELHO INFINITO</title>
     <style>
         body { margin: 0; overflow: hidden; background: #000; font-family: 'Segoe UI', sans-serif; }
-        #timer { position: absolute; top: 15px; left: 50%; transform: translateX(-50%); font-size: 28px; font-weight: bold; color: white; background: rgba(0,0,0,0.85); padding: 10px 25px; border-radius: 12px; border: 2px solid #ed1c24; z-index: 100; box-shadow: 0 0 20px rgba(237, 28, 36, 0.3); }
+        #timer { position: absolute; top: 15px; left: 50%; transform: translateX(-50%); font-size: 28px; font-weight: bold; color: white; background: rgba(0,0,0,0.85); padding: 10px 25px; border-radius: 12px; border: 2px solid #ed1c24; z-index: 100; }
         #status { position: fixed; bottom: 0; width: 100%; text-align: center; color: white; background: rgba(0,0,0,0.8); padding: 12px; font-weight: bold; z-index: 100; }
     </style>
 </head>
 <body>
     <div id="timer">00:00.00</div>
-    <div id="status">💎 Renderizando Reflexos em Tempo Real...</div>
+    <div id="status">💎 Ativando Reflexo de Cristal (Escala 6)...</div>
 
     <script type="module">
         import * as THREE from 'https://cdn.skypack.dev/three@0.136.0';
         import { GLTFLoader } from 'https://cdn.skypack.dev/three@0.136.0/examples/jsm/loaders/GLTFLoader.js';
-        import { Reflector } from 'https://cdn.skypack.dev/three@0.136.0/examples/jsm/objects/Reflector.js';
 
         const scene = new THREE.Scene();
-        // Um céu de fim de tarde para combinar com o espelho
-        scene.background = new THREE.Color(0x020205); 
-        scene.fog = new THREE.Fog(0x020205, 100, 1500);
+        // Fundo cinza escuro de luxo para destacar o carro
+        scene.background = new THREE.Color(0x0a0a0a); 
+        scene.fog = new THREE.Fog(0x0a0a0a, 200, 2000);
 
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 10000);
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         renderer.outputEncoding = THREE.sRGBEncoding;
-        renderer.setPixelRatio(window.devicePixelRatio);
         document.body.appendChild(renderer.domElement);
 
-        // LUZES DE ALTA QUALIDADE
-        scene.add(new THREE.AmbientLight(0xffffff, 1.8));
-        const spot = new THREE.SpotLight(0xffffff, 2);
-        spot.position.set(100, 1000, 100);
-        scene.add(spot);
+        // LUZES FORTES (Para o carro não ficar preto nunca mais!)
+        const light = new THREE.AmbientLight(0xffffff, 2.0);
+        scene.add(light);
+        const sun = new THREE.DirectionalLight(0xffffff, 1.5);
+        sun.position.set(50, 100, 50);
+        scene.add(sun);
 
-        // --- O ESPELHO REAL (REFLECTOR) ---
-        const mirrorOptions = {
-            clipBias: 0.003,
-            textureWidth: window.innerWidth * window.devicePixelRatio,
-            textureHeight: window.innerHeight * window.devicePixelRatio,
-            color: 0x777777
-        };
-        const mirrorGeo = new THREE.PlaneGeometry(10000, 10000);
-        const groundMirror = new Reflector(mirrorGeo, mirrorOptions);
-        groundMirror.rotateX(-Math.PI / 2);
-        groundMirror.position.y = -0.1; // Logo abaixo da roda
-        scene.add(groundMirror);
+        // --- O CHÃO DE ESPELHO (VERSÃO ESTÁVEL) ---
+        const planeGeo = new THREE.PlaneGeometry(10000, 10000);
+        const planeMat = new THREE.MeshStandardMaterial({ 
+            color: 0x111111, 
+            metalness: 1.0,  // Totalmente metálico
+            roughness: 0.1,  // Quase zero rugosidade (brilho máximo)
+        });
+        const mirrorFloor = new THREE.Mesh(planeGeo, planeMat);
+        mirrorFloor.rotation.x = -Math.PI / 2;
+        mirrorFloor.position.y = -0.05; 
+        scene.add(mirrorFloor);
 
         const loader = new GLTFLoader();
         let car, city, startTime = Date.now();
@@ -59,10 +57,14 @@
             
             loader.load('low_poly_ferrari_roma.glb', (gltfCar) => {
                 car = gltfCar.scene;
+                
+                // Garante que o material da Ferrari aceite as luzes
+                car.traverse(n => { if(n.isMesh) n.castShadow = true; });
+
                 car.scale.set(6, 6, 6); 
                 car.position.set(0, 0.15, 0); 
                 scene.add(car);
-                document.getElementById('status').innerText = "✅ MODO ULTRA ATIVADO - REFLEXOS 100%";
+                document.getElementById('status').innerText = "✅ EFEITO ESPELHO OK! SEM TRAVAMENTOS.";
             });
         });
 
@@ -83,6 +85,7 @@
                 camera.lookAt(car.position);
             }
 
+            // Relógio Detran
             const delta = Date.now() - startTime;
             const mins = Math.floor(delta / 60000).toString().padStart(2, '0');
             const secs = Math.floor((delta % 60000) / 1000).toString().padStart(2, '0');
