--- a/index.html
+++ b/index.html
@@ -2,29 +2,28 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>DETRAN-SP 3D | HAMBURGUERIA</title>
+    <title>DETRAN-SP 3D | LANCHONETE</title>
     <style>
-        body { margin: 0; overflow: hidden; background: #000; font-family: sans-serif; }
+        body { margin: 0; overflow: hidden; background: #87CEEB; font-family: sans-serif; }
         #timer { position: absolute; top: 15px; left: 50%; transform: translateX(-50%); font-size: 28px; font-weight: bold; color: white; background: rgba(0,0,0,0.8); padding: 10px 25px; border-radius: 12px; border: 2px solid #ed1c24; z-index: 100; }
         #status { position: fixed; bottom: 0; width: 100%; text-align: center; color: white; background: rgba(0,0,0,0.8); padding: 12px; font-weight: bold; z-index: 100; }
     </style>
 </head>
 <body>
     <div id="timer">00:00.00</div>
-    <div id="status">🍔 Instalando máquina de refri na hamburgueria...</div>
+    <div id="status">🥤 Ajustando tamanho da máquina de refri...</div>
 
     <script type="module">
         import * as THREE from 'https://cdn.skypack.dev/three@0.136.0';
         import { GLTFLoader } from 'https://cdn.skypack.dev/three@0.136.0/examples/jsm/loaders/GLTFLoader.js';
 
         const scene = new THREE.Scene();
-        scene.background = new THREE.Color(0x1a1a1a); 
-        scene.fog = new THREE.Fog(0x1a1a1a, 100, 1500);
+        scene.background = new THREE.Color(0x87CEEB); 
 
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 10000);
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
-        renderer.outputEncoding = THREE.sRGBEncoding;
+        renderer.outputEncoding = THREE.sRGBEncoding; 
         document.body.appendChild(renderer.domElement);
 
         scene.add(new THREE.AmbientLight(0xffffff, 1.8));
@@ -32,39 +31,31 @@
         sun.position.set(10, 50, 10);
         scene.add(sun);
 
-        // CHÃO DE CRISTAL
-        const planeGeo = new THREE.PlaneGeometry(5000, 5000);
-        const planeMat = new THREE.MeshPhysicalMaterial({ color: 0x222222, metalness: 0.8, roughness: 0.1, clearcoat: 1.0 });
-        const mirrorFloor = new THREE.Mesh(planeGeo, planeMat);
-        mirrorFloor.rotation.x = -Math.PI / 2;
-        mirrorFloor.position.y = -0.02;
-        scene.add(mirrorFloor);
-
         const loader = new GLTFLoader();
         let car, city, startTime = Date.now();
         let keys = {};
 
-        // 1. CARREGAR CIDADE
         loader.load('city_-_cidade (2).glb', (gltf) => {
             city = gltf.scene;
             scene.add(city);
             
-            // 2. CARREGAR MÁQUINA DE REFRI (Vending Machine)
+            // CARREGAR MÁQUINA DE REFRI (Vending Machine)
             loader.load('vending_machine.glb', (gltfMachine) => {
                 const machine = gltfMachine.scene;
-                // Ajustando tamanho e lugar (do lado da hamburgueria)
-                machine.scale.set(2, 2, 2); 
-                machine.position.set(15, 0, -10); // Ajuste esses números para mover a máquina
+                // ESCALA AUMENTADA PARA 4 (Estava 2)
+                machine.scale.set(4, 4, 4); 
+                // POSIÇÃO AJUSTADA (Perto da área da lanchonete)
+                machine.position.set(20, 0, -15); 
                 scene.add(machine);
             });
 
-            // 3. CARREGAR FERRARI
+            // CARREGAR FERRARI (Escala 6)
             loader.load('low_poly_ferrari_roma.glb', (gltfCar) => {
                 car = gltfCar.scene;
                 car.scale.set(6, 6, 6); 
                 car.position.set(0, 0.15, 0); 
                 scene.add(car);
-                document.getElementById('status').innerText = "✅ CIDADE, FERRARI E REFRI CARREGADOS!";
+                document.getElementById('status').innerText = "✅ MÁQUINA AMPLIADA E POSICIONADA!";
             });
         });
 
@@ -74,8 +65,9 @@
         function animate() {
             requestAnimationFrame(animate);
             if (car) {
-                if (keys['ArrowUp']) car.translateZ(1.2);
-                if (keys['ArrowDown']) car.translateZ(-0.6);
+                const speed = 1.2;
+                if (keys['ArrowUp']) car.translateZ(speed);
+                if (keys['ArrowDown']) car.translateZ(-speed/2);
                 if (keys['ArrowLeft']) car.rotation.y += 0.06;
                 if (keys['ArrowRight']) car.rotation.y -= 0.06;
 
@@ -83,7 +75,7 @@
                 camera.position.lerp(offset, 0.1);
                 camera.lookAt(car.position);
             }
-            // Timer
+
             const delta = Date.now() - startTime;
             const mins = Math.floor(delta / 60000).toString().padStart(2, '0');
             const secs = Math.floor((delta % 60000) / 1000).toString().padStart(2, '0');
@@ -93,6 +85,12 @@
             renderer.render(scene, camera);
         }
         animate();
+
+        window.onresize = () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        };
     </script>
 </body>
 </html>
