--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>DETRAN-SP 3D | LANCHONETE</title>
+    <title>DETRAN-SP 3D | AJUSTE FINAL</title>
     <style>
         body { margin: 0; overflow: hidden; background: #87CEEB; font-family: sans-serif; }
         #timer { position: absolute; top: 15px; left: 50%; transform: translateX(-50%); font-size: 28px; font-weight: bold; color: white; background: rgba(0,0,0,0.8); padding: 10px 25px; border-radius: 12px; border: 2px solid #ed1c24; z-index: 100; }
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="timer">00:00.00</div>
-    <div id="status">🥤 Ajustando tamanho da máquina de refri...</div>
+    <div id="status">🥤 Movendo máquina para a calçada...</div>
 
     <script type="module">
         import * as THREE from 'https://cdn.skypack.dev/three@0.136.0';
@@ -42,20 +42,22 @@
             // CARREGAR MÁQUINA DE REFRI (Vending Machine)
             loader.load('vending_machine.glb', (gltfMachine) => {
                 const machine = gltfMachine.scene;
-                // ESCALA AUMENTADA PARA 4 (Estava 2)
-                machine.scale.set(4, 4, 4); 
-                // POSIÇÃO AJUSTADA (Perto da área da lanchonete)
-                machine.position.set(20, 0, -15); 
+                machine.scale.set(5, 5, 5); // Escala 5 para ficar imponente
+                
+                // --- AJUSTE DE POSIÇÃO ---
+                // Mudei o 20 para 45 (Lado) e o -15 para -30 (Profundidade)
+                // Isso deve tirar ela do meio da pista e colocar na frente da lanchonete
+                machine.position.set(45, 0, -30); 
+                
                 scene.add(machine);
             });
 
-            // CARREGAR FERRARI (Escala 6)
             loader.load('low_poly_ferrari_roma.glb', (gltfCar) => {
                 car = gltfCar.scene;
                 car.scale.set(6, 6, 6); 
                 car.position.set(0, 0.15, 0); 
                 scene.add(car);
-                document.getElementById('status').innerText = "✅ MÁQUINA AMPLIADA E POSICIONADA!";
+                document.getElementById('status').innerText = "✅ MÁQUINA NA CALÇADA!";
             });
         });
 
@@ -85,12 +87,6 @@
             renderer.render(scene, camera);
         }
         animate();
-
-        window.onresize = () => {
-            camera.aspect = window.innerWidth / window.innerHeight;
-            camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth, window.innerHeight);
-        };
     </script>
 </body>
 </html>
