--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>DETRAN-SP | CIRCUITO REVISADO</title>
+    <title>DETRAN-SP | CIRCUITO REVISADO FINAL</title>
     <style>
         body { margin: 0; overflow: hidden; background: #87CEEB; font-family: 'Segoe UI', sans-serif; }
         #timer { position: absolute; top: 15px; left: 20px; font-size: 24px; font-weight: bold; color: white; background: rgba(0,0,0,0.8); padding: 10px; border-radius: 10px; border: 2px solid #ed1c24; z-index: 100; }
@@ -48,16 +48,18 @@
         let etapaAtual = 0;
         let emMovimento = false;
 
-        // --- ROTA COM DISTÂNCIA EXTRA ENTRE PERGUNTA 3 E 4 ---
+        // --- ROTA COM CURVA ABERTA (FORÇADA) ---
+        // Z: 224 (Meio da rua)
+        // X: 165 (Ponto de curva avançado para não cortar a quina)
         const rota = [
-            { x: -114, z: 222, pausa: false }, // Início
-            { x: -50,  z: 222, pausa: true,  q: "Qual a cor que indica 'Pare'?", r: ["Vermelho", "Verde"], c: 0 },
-            { x: 30,   z: 222, pausa: true,  q: "Cinto de segurança é obrigatório?", r: ["Sim", "Não"], c: 0 },
-            { x: 100,  z: 222, pausa: true,  q: "Sinal vermelho pode passar?", r: ["Não", "Sim"], c: 0 }, // Pergunta 3
-            { x: 155,  z: 222, pausa: false }, // Curva (Ponto extra para alongar o caminho)
-            { x: 155,  z: 130, pausa: true,  q: "Celular ao dirigir?", r: ["Proibido", "Permitido"], c: 0 }, // Pergunta 4 (Mais longe agora)
-            { x: 155,  z: 70,  pausa: true,  q: "Prioridade do pedestre?", r: ["Sim", "Não"], c: 0 },
-            { x: 155,  z: 15,  pausa: true,  q: "Parabéns! Final da Prova!", r: ["Finalizar", "Reiniciar"], c: 0 }
+            { x: -114, z: 224, pausa: false }, 
+            { x: -50,  z: 224, pausa: true,  q: "Qual a cor que indica 'Pare'?", r: ["Vermelho", "Verde"], c: 0 },
+            { x: 30,   z: 224, pausa: true,  q: "Cinto de segurança é obrigatório?", r: ["Sim", "Não"], c: 0 },
+            { x: 100,  z: 224, pausa: true,  q: "Sinal vermelho pode passar?", r: ["Não", "Sim"], c: 0 }, // Pergunta 3
+            { x: 165,  z: 224, pausa: false }, // VÉRTICE: Ele vai bem longe antes de virar
+            { x: 165,  z: 110, pausa: true,  q: "Celular ao dirigir?", r: ["Proibido", "Permitido"], c: 0 }, // Pergunta 4 (Distância aumentada)
+            { x: 165,  z: 60,  pausa: true,  q: "Prioridade do pedestre?", r: ["Sim", "Não"], c: 0 },
+            { x: 165,  z: 10,  pausa: true,  q: "Parabéns! Final da Prova!", r: ["Finalizar", "Reiniciar"], c: 0 }
         ];
 
         loader.load('city_-_cidade (2).glb', (gltf) => {
@@ -111,8 +113,9 @@
             if (car && emMovimento && etapaAtual < rota.length) {
                 const destino = rota[etapaAtual];
                 
-                car.position.x += (destino.x - car.position.x) * 0.06;
-                car.position.z += (destino.z - car.position.z) * 0.06;
+                // Movimentação com suavidade ajustada para curvas
+                car.position.x += (destino.x - car.position.x) * 0.05;
+                car.position.z += (destino.z - car.position.z) * 0.05;
 
                 const dx = destino.x - car.position.x;
                 const dz = destino.z - car.position.z;
@@ -125,7 +128,8 @@
                     car.rotation.y += diff * 0.1;
                 }
 
-                if (Math.abs(dx) < 0.5 && Math.abs(dz) < 0.5) {
+                // Chegada no ponto: Reduzi a margem para 0.3 para ele chegar mais perto do ponto de segurança antes de mudar
+                if (Math.abs(dx) < 0.3 && Math.abs(dz) < 0.3) {
                     if (destino.pausa) {
                         emMovimento = false;
                         montarPergunta();
